Fix Naming Conventions, Remove Unused Code, and Format Code

--- a/src/app/components/employee/requests/requests.component.html
+++ b/src/app/components/employee/requests/requests.component.html
@@ -52,7 +52,7 @@
             <button
               class="approve"
               (click)="
-                ApproveServiceRequest(
+                approveServiceRequest(
                   pendingServiceRequest.id,
                   pendingServiceRequest
                 )
@@ -104,7 +104,7 @@
             <button
               class="approve"
               (click)="
-                CompleteServiceRequest(
+                completeServiceRequest(
                   inProgressServiceRequest.id,
                   inProgressServiceRequest
                 )
