--- a/src/app/components/shared/rooms/rooms.component.html
+++ b/src/app/components/shared/rooms/rooms.component.html
@@ -1,25 +1,74 @@
-<div class="d-flex justify-content-between mt-2 ms-5 me-5">
-  <div class="d-flex">
-    <h1 class="m-4">
-      {{ "room.rooms" | translate }}
-    </h1>
+<div class="d-flex justify-content-between mt-2 ms-5 me-5 align-items-center">
+  <div class="d-flex align-items-center">
+    <h1 class="m-4">{{ "room.rooms" | translate }}</h1>
     <img class="fill-icon" src="/assets/images/bed-brown-filled-icon.png" />
   </div>
-  @if(user?.role == "Admin"){
-  <button
-    class="btn btn-primary"
-    [routerLink]="['/admin/add-room']"
-    routerLinkActive="router-link-active"
-    [title]="'room.add-room' | translate"
-  >
-    <i class="bi bi-house-add-fill h4 m-1 align-middle"></i>
-    <span class="m-1 align-middle">{{ "room.add-room" | translate }}</span>
-  </button>
-  }
+  <div class="d-flex align-items-center w-50">
+    <div class="input-group" [ngClass]="{ 'right-input': lang == 'ar' }">
+      <div class="align-self-center">
+        <span class="input-group-text align-self-center bg-white"
+          ><i class="fa-solid fa-magnifying-glass filter-icon"></i>
+        </span>
+      </div>
+      <input
+        type="text"
+        class="form-control"
+        [placeholder]="'shared.filter.search' | translate"
+        [(ngModel)]="searchInput"
+        (input)="onSearchChange()"
+      />
+    </div>
+    <div class="input-group w-25" [ngClass]="{ 'right-input': lang == 'ar' }">
+      <div class="align-self-center">
+        <span class="input-group-text align-self-center bg-white">
+          <i class="fa-solid fa-filter filter-icon"></i>
+        </span>
+      </div>
+      <select
+        class="form-select"
+        [(ngModel)]="sortBy"
+        (change)="onSortChange(sortBy)"
+      >
+        <option value="">{{ "shared.filter.sort-by" | translate }}</option>
+        <option value="title">{{ "shared.form.title" | translate }}</option>
+        <option value="type">{{ "shared.form.type" | translate }}</option>
+        <option value="hotel">{{ "shared.form.hotel" | translate }}</option>
+        <option value="price">{{ "shared.form.price" | translate }}</option>
+      </select>
+    </div>
+    <button
+      class="btn-outline ms-1 me-1 p-1 ps-2 pe-2"
+      type="button"
+      (click)="toggleSortDirection()"
+      [title]="'shared.filter.toggle-direction' | translate"
+    >
+      <i
+        *ngIf="sortDirection === 'Ascending'"
+        class="bi bi-sort-down-alt h4"
+      ></i>
+      <i
+        *ngIf="sortDirection === 'Descending'"
+        class="bi bi-sort-up-alt h4"
+      ></i>
+    </button>
+  </div>
+  <div class="d-flex flex-column flex-md-row align-items-center">
+    @if(user?.role == "Admin"){
+    <button
+      class="btn btn-primary"
+      [routerLink]="['/admin/add-room']"
+      routerLinkActive="router-link-active"
+      [title]="'room.add-room' | translate"
+    >
+      <i class="bi bi-house-add-fill h4 m-1 align-middle"></i>
+      <span class="m-1 align-middle">{{ "room.add-room" | translate }}</span>
+    </button>
+    }
+  </div>
 </div>
 
 <div class="rooms-container">
-  @for(room of rooms; let i= $index; track i){
+  @for(room of filteredRooms; let i= $index; track i){
   <div class="room-card">
     @if(role == 'Admin'){
     <i
@@ -59,13 +108,17 @@
           } {{ room.roomType }}
         </div>
         <div>
+          <strong class="me-2">{{ "room.hotel" | translate }}:</strong>
+          <span> {{ room.hotel }}</span>
+        </div>
+        <!-- <div>
           <strong class="me-2">{{ "room.booked-status" | translate }}:</strong>
           <span
             [style.color]="room.bookedStatus === 'Available' ? 'green' : 'red'"
           >
             {{ room.bookedStatus }}</span
           >
-        </div>
+        </div> -->
         <div>
           <strong class="me-2">{{ "shared.form.price" | translate }}:</strong
           >{{ room.price | currency : "USD" : "symbol" : "1.0-0" }}
