--- a/src/app/components/admin/manage-users/manage-users.component.html
+++ b/src/app/components/admin/manage-users/manage-users.component.html
@@ -7,6 +7,7 @@
       <img
         class="fill-icon"
         src="/assets/images/manage-users-brown-filled-icon.png"
+        alt="manage users icon"
       />
     </div>
     <button
