Remove Title Headers

--- a/src/app/components/admin/manage-users/manage-users.component.html
+++ b/src/app/components/admin/manage-users/manage-users.component.html
@@ -3,12 +3,8 @@
     <div class="d-flex">
       <h1 class="m-4">
         {{ "user.roles.users" | translate }}
+        <i class="fill-icon fa-solid fa-users-gear fa-2xs ms-1"></i>
       </h1>
-      <img
-        class="fill-icon"
-        src="/assets/images/manage-users-brown-filled-icon.png"
-        alt="manage users icon"
-      />
     </div>
     <button
       class="btn btn-primary m-4"
