--- a/src/app/components/admin/reservations/reservations.component.html
+++ b/src/app/components/admin/reservations/reservations.component.html
@@ -1,14 +1,9 @@
-<div class="d-flex">
-  <h1 class="m-4">{{ "reservation.reservations" | translate }}</h1>
-  <img
-    class="fill-icon p-0"
-    src="/assets/images/reservations-brown-filled-icon.png"
-  />
-</div>
-
 <div class="page">
-  @if(pendingReservations.length >0){
-  <h1 class="m-4">{{ "reservation.pending" | translate }}</h1>
+  @if(pendingReservations.length > 0){
+  <h1 class="m-4">
+    {{ "reservation.pending-reservations" | translate }}
+    <i class="fa-solid fa-clock fa-xs ms-1 me-1"></i>
+  </h1>
   <div class="rounded-4 shadow border overflow-hidden mb-5">
     <table class="table table-striped table-bordered mb-0">
       <thead>
@@ -73,12 +68,11 @@
       </tbody>
     </table>
   </div>
-  } @else {
-  <h3 class="text-center mt-5">
-    {{ "reservation.no-pending-reservations" | translate }}
-  </h3>
   } @if(activeReservations.length > 0){
-  <h1 class="m-4 mb-4">{{ "reservation.active" | translate }}</h1>
+  <h1 class="m-4 mb-4">
+    {{ "reservation.active-reservations" | translate }}
+    <i class="fa-solid fa-calendar-week fa-xs ms-1 me-1"></i>
+  </h1>
   <div class="rounded-4 shadow border overflow-hidden">
     <table class="table table-striped table-bordered mb-0">
       <thead>
@@ -121,9 +115,9 @@
       </tbody>
     </table>
   </div>
-  } @else {
+  } @if(pendingReservations.length <= 0 && activeReservations.length <= 0) {
   <h3 class="text-center">
-    {{ "reservation.no-active-reservations" | translate }}
+    {{ "reservation.no-reservations" | translate }}
   </h3>
   }
 </div>
