--- a/src/app/components/admin/reservations/reservations.component.scss
+++ b/src/app/components/admin/reservations/reservations.component.scss
@@ -31,16 +31,10 @@ button {
   color: $color-light-red;
 }
 
-img {
-  width: 50px;
-  object-fit: contain;
-}
-
 h3 {
   margin-top: 100px;
 }
 
-.fill-icon {
-  width: 35px;
-  padding-bottom: 7px;
+i {
+  color: $color-dark-brown;
 }
