--- a/src/app/components/shared/auth/profile/profile.component.scss
+++ b/src/app/components/shared/auth/profile/profile.component.scss
@@ -10,6 +10,7 @@
 .container {
   background-color: white;
   margin: auto;
+  margin-top: 100px;
   display: flex;
   flex-direction: column;
   justify-content: center;
