--- a/src/app/components/shared/rooms/rooms.component.html
+++ b/src/app/components/shared/rooms/rooms.component.html
@@ -1,8 +1,5 @@
 <div class="d-flex justify-content-between mt-2 ms-5 me-5 align-items-center">
-  <div class="d-flex align-items-center">
-    <h1 class="m-4">{{ "room.rooms" | translate }}</h1>
-    <img class="fill-icon" src="/assets/images/bed-brown-filled-icon.png" />
-  </div>
+  <div></div>
   <div class="d-flex align-items-center w-50">
     <div class="input-group" [ngClass]="{ 'right-input': lang == 'ar' }">
       <div class="align-self-center">
@@ -37,7 +34,7 @@
       </select>
     </div>
     <button
-      class="btn-outline ms-1 me-1 p-1 ps-2 pe-2"
+      class="btn-outline border-0 p-1"
       type="button"
       (click)="toggleSortDirection()"
       [title]="'shared.filter.toggle-direction' | translate"
