Remove Redundant id Parameter From Functions

--- a/src/app/components/admin/reservations/reservations.component.html
+++ b/src/app/components/admin/reservations/reservations.component.html
@@ -41,7 +41,7 @@
             </button>
             <button
               class="approve"
-              (click)="approveReservationRequest(reservation.id, reservation)"
+              (click)="approveReservationRequest(reservation)"
             >
               <!-- <i class="bi bi-check-circle h5"></i> -->
               <i
@@ -52,7 +52,7 @@
             </button>
             <button
               class="reject"
-              (click)="rejectReservationRequest(reservation.id, reservation)"
+              (click)="rejectReservationRequest(reservation)"
             >
               <!-- <i class="bi bi-x-circle-fill h5"></i> -->
               <i
