--- a/src/app/components/employee/requests/requests.component.html
+++ b/src/app/components/employee/requests/requests.component.html
@@ -51,12 +51,7 @@
           <td>
             <button
               class="approve"
-              (click)="
-                approveServiceRequest(
-                  pendingServiceRequest.id,
-                  pendingServiceRequest
-                )
-              "
+              (click)="approveServiceRequest(pendingServiceRequest)"
             >
               <i
                 class="bi bi-check-circle-fill h5"
@@ -103,12 +98,7 @@
           <td>
             <button
               class="approve"
-              (click)="
-                completeServiceRequest(
-                  inProgressServiceRequest.id,
-                  inProgressServiceRequest
-                )
-              "
+              (click)="completeServiceRequest(inProgressServiceRequest)"
             >
               <i
                 class="fa-solid fa-clipboard-check fa-xl"
