--- a/src/app/components/admin/reservations/reservations.component.html
+++ b/src/app/components/admin/reservations/reservations.component.html
@@ -2,10 +2,17 @@
   @if(pendingReservations.length > 0){
   <h1 class="m-4">
     {{ "reservation.pending-reservations" | translate }}
-    <i class="fa-solid fa-clock fa-xs ms-1 me-1"></i>
+    <i class="fill-icon fa-solid fa-clock fa-xs ms-1 me-1"></i>
   </h1>
   <div class="rounded-4 shadow border overflow-hidden mb-5">
     <table class="table table-striped table-bordered mb-0">
+      <!--   <table
+    #pendingTable
+    datatable
+    [dtOptions]="dtOptionsPending"
+    [dtTrigger]="dtTriggerPending"
+    class="table table-striped table-bordered mb-4 rounded-4"
+  > -->
       <thead>
         <tr>
           <th>{{ "shared.entity.id" | translate }}</th>
@@ -71,10 +78,17 @@
   } @if(activeReservations.length > 0){
   <h1 class="m-4 mb-4">
     {{ "reservation.active-reservations" | translate }}
-    <i class="fa-solid fa-calendar-week fa-xs ms-1 me-1"></i>
+    <i class="fill-icon fa-solid fa-calendar-week fa-xs ms-1 me-1"></i>
   </h1>
   <div class="rounded-4 shadow border overflow-hidden">
     <table class="table table-striped table-bordered mb-0">
+      <!--   <table
+    #activeTable
+    datatable
+    [dtOptions]="dtOptionsActive"
+    [dtTrigger]="dtTriggerActive"
+    class="table table-striped table-bordered mb-4 rounded-4"
+  >s -->
       <thead>
         <tr>
           <th>{{ "shared.entity.id" | translate }}</th>
