--- a/src/app/components/employee/requests/requests.component.html
+++ b/src/app/components/employee/requests/requests.component.html
@@ -25,6 +25,13 @@
   </div>
   <div class="rounded-4 shadow border overflow-hidden mb-5">
     <table class="table table-striped table-bordered mb-0">
+      <!-- <table
+      #pendingTable
+      datatable
+      [dtOptions]="dtOptionsPending"
+      [dtTrigger]="dtTriggerPending"
+      class="table table-striped table-bordered mb-0"
+    > -->
       <thead>
         <tr>
           <th>
@@ -35,7 +42,7 @@
             {{ "user.user-role.customer" | translate }}
             {{ "user.name" | translate }}
           </th>
-          <th>{{ "service.title" | translate }}</th>
+          <th>{{ "shared.form.title" | translate }}</th>
           <th>{{ "room.floor" | translate }}</th>
           <th>{{ "shared.actions" | translate }}</th>
         </tr>
@@ -72,6 +79,13 @@
   </div>
   <div class="rounded-4 shadow border overflow-hidden mb-5">
     <table class="table table-striped table-bordered mb-0">
+      <!-- <table
+      #activeTable
+      datatable
+      [dtOptions]="dtOptionsActive"
+      [dtTrigger]="dtTriggerActive"
+      class="table table-striped table-bordered mb-0"
+    > -->
       <thead>
         <tr>
           <th>
@@ -119,6 +133,13 @@
   </div>
   <div class="rounded-4 shadow border overflow-hidden mb-5">
     <table class="table table-striped table-bordered mb-0">
+      <!-- <table
+      #completeTable
+      datatable
+      [dtOptions]="dtOptionsComplete"
+      [dtTrigger]="dtTriggerComplete"
+      class="table table-striped table-bordered mb-0"
+    > -->
       <thead>
         <tr>
           <th>
