--- a/src/app/components/shared/auth/login/login.component.html
+++ b/src/app/components/shared/auth/login/login.component.html
@@ -46,7 +46,7 @@
 
     <div class="d-flex justify-content-center m-0">
       <button class="btn-primary" type="submit">
-        {{ "button.login" | translate }}
+        {{ "shared.button.login" | translate }}
       </button>
     </div>
     <!-- <div class="d-flex justify-content-center">
