--- a/src/app/components/shared/room-details/room-details.component.html
+++ b/src/app/components/shared/room-details/room-details.component.html
@@ -1,5 +1,5 @@
 <div class="page">
-  <div class="container p-4 ps-5 pe-5 mt-4 mb-4">
+  <div class="container">
     <div class="img-container" [title]="'room.room-image' | translate">
       <div class="slider" [style.transform]="slide()">
         <img
