--- a/src/app/components/shared/rooms/rooms.component.html
+++ b/src/app/components/shared/rooms/rooms.component.html
@@ -1,7 +1,10 @@
 <div class="d-flex justify-content-between mt-2 ms-5 me-5 align-items-center">
   <div></div>
-  <div class="d-flex align-items-center w-50">
-    <div class="input-group" [ngClass]="{ 'right-input': lang == 'ar' }">
+  <div class="d-flex justify-content-center w-75">
+    <div
+      class="input-group search-container"
+      [ngClass]="{ 'right-input': lang == 'ar' }"
+    >
       <div class="align-self-center">
         <span class="input-group-text align-self-center bg-white"
           ><i class="fa-solid fa-magnifying-glass filter-icon"></i>
@@ -15,7 +18,10 @@
         (input)="onSearchChange()"
       />
     </div>
-    <div class="input-group w-25" [ngClass]="{ 'right-input': lang == 'ar' }">
+    <div
+      class="input-group sort-by-container"
+      [ngClass]="{ 'right-input': lang == 'ar' }"
+    >
       <div class="align-self-center">
         <span class="input-group-text align-self-center bg-white">
           <i class="fa-solid fa-filter filter-icon"></i>
@@ -58,7 +64,9 @@
       [title]="'room.add-room' | translate"
     >
       <i class="bi bi-house-add-fill h4 m-1 align-middle"></i>
-      <span class="m-1 align-middle">{{ "room.add-room" | translate }}</span>
+      <span class="m-1 align-middle add-rooms-text">{{
+        "room.add-room" | translate
+      }}</span>
     </button>
     }
   </div>
