--- a/src/app/components/admin/manage-users/manage-users.component.html
+++ b/src/app/components/admin/manage-users/manage-users.component.html
@@ -13,7 +13,7 @@
       [title]="'user.add-employee' | translate"
     >
       <i class="bi bi-person-plus-fill h4 m-1 align-middle"></i>
-      <span class="m-1 align-middle">{{
+      <span class="add-employee-text m-1 align-middle">{{
         "user.add-employee" | translate
       }}</span>
     </button>
