--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,6 @@
-$color-light-cream: #faf3e8;
-$color-cream: #fbebd4;
+$color-light-cream: #fcf8f3;
+$color-cream: #faf3e8;
+$color-creamy: #fbebd4;
 $color-tan: #d0b998;
 $color-caramel: #ad926b;
 $color-brown: #8a704a;
