Add Responsiveness in UserDetailsComponent

--- a/src/app/components/admin/user-details/user-details.component.html
+++ b/src/app/components/admin/user-details/user-details.component.html
@@ -1,5 +1,5 @@
 <div class="page">
-  <h1 class="m-4 mb-4">{{ "user.personal-details" | translate }}</h1>
+  <h1 class="title m-4 mb-4">{{ "user.personal-details" | translate }}</h1>
   <div class="container details-container p-4 ps-5 pe-5 mt-4">
     <div class="pfp-container">
       <img
@@ -128,7 +128,7 @@
   </h3>
   } }
   <button
-    class="mt-5 go-back-button btn-outline-primary rounded-2"
+    class="go-back-button btn-outline-primary rounded-2"
     [routerLink]="['/admin/manage-users']"
     routerLinkActive="router-link-active"
     [title]="'shared.button.go-back' | translate"
