Fix AppComponent Responsive Design and page Classes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="page">
+<div class="webpage">
   <header><app-header></app-header></header>
   <div class="layout-wrapper">
     <div class="side-image left"></div>
