--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,10 @@
 @import "../node_modules/bootstrap-icons/font/bootstrap-icons.css";
 @import "../src/styles/variables.scss";
 
+.page {
+  min-width: 500px;
+}
+
 .btn-primary {
   margin-top: 1rem;
   padding: 0.7rem 1.5rem;
@@ -114,6 +118,7 @@
   }
   .main-content {
     margin: 0 !important;
+    padding: 30px !important;
   }
 }
 
