--- a/src/app/components/customer/available-services/available-services.component.html
+++ b/src/app/components/customer/available-services/available-services.component.html
@@ -1,13 +1,3 @@
-<ngb-toast
-  *ngIf="showToast"
-  class="bg-success text-white position-fixed top-0 end-0 m-3"
-  [autohide]="true"
-  [delay]="3000"
-  (hidden)="showToast = false"
->
-  {{ toastMessage }}
-</ngb-toast>
-
 <div
   class="services-container"
   *ngIf="filteredServices.length > 0; else noServices"
@@ -48,3 +38,5 @@
 <ng-template #noServices>
   <p>{{ "service.no-available-services" | translate }}</p>
 </ng-template>
+
+<p-toast></p-toast>
