--- a/src/app/components/shared/room-details/room-details.component.html
+++ b/src/app/components/shared/room-details/room-details.component.html
@@ -69,6 +69,14 @@
 
       <div class="data-section">
         <p class="data-title">
+          <i class="fa-solid fa-users"></i>
+          {{ "room.capacity" | translate }}:
+        </p>
+        <p class="data">{{ room?.capacity }}</p>
+      </div>
+
+      <div class="data-section">
+        <p class="data-title">
           <i class="fa-solid fa-layer-group"></i>
           {{ "room.floor" | translate }}:
         </p>
