Remove Page Scroll X, Move RoomDetails back-button Outside div, And Add align-items-center to Filters div

--- a/src/app/components/shared/rooms/rooms.component.html
+++ b/src/app/components/shared/rooms/rooms.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-between mt-2 ms-5 me-5 align-items-center">
   <div></div>
-  <div class="d-flex justify-content-center w-75">
+  <div class="d-flex justify-content-center align-items-center w-75">
     <div
       class="input-group search-container"
       [ngClass]="{ 'right-input': lang == 'ar' }"
