--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,14 +38,14 @@
 
 .main-content {
   position: relative;
-  z-index: 1; // ensure it's above the side images
-  padding: 0 80px; // replace margin with padding
+  z-index: 1; // to be above the side images
+  padding: 0 80px;
   width: 100%;
   box-sizing: border-box;
   flex: 1;
   display: flex;
   flex-direction: column;
-  overflow-x: auto; // in case content like tables is still too wide
+  overflow-x: auto; // if content like tables overflowed
 }
 
 .side-image {
